[build-system]
requires = ["setuptools", "setuptools-scm", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "FMNM"
version = "1.0.0"
authors = [{ name = "cantaro86", email = "nicolacantarutti@gmail.com" }]
description = "Library for the code used in the FMNM notebooks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arch",
    "black>=25.1.0",
    "cvxpy",
    "cython",
    "jupyter",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "seaborn",
    "statsmodels",
    "sympy",
]
